Feature/ipehr 175 doctors additional attributes (#118)
* [IPEHR-175] API userRegister - additional fields for doctor, userInfo implementation + integration test

* [IPEHR-175] remove defaultUserRegister from test prepare script

* [IPEHR-175] restore defaultUserRegister

* [IPEHR-175] restore defaultUserRegister

* [IPEHR-175] tests fixes

* [IPEHR-175] swagger update

* [IPEHR-175] fixes after review

* [IPEHR-175] fixes after review
