# src/pkg/api/docs/swagger.yaml
@@ -322,7 +322,15 @@ definitions:
     type: object
   model.UserCreateRequest:
     properties:
+      address:
+        type: string
+      description:
+        type: string
+      name:
+        type: string
       password:
+        type: string
+      pictureURL:
         type: string
       role:
         type: integer
@@ -340,6 +348,21 @@ definitions:
           type: string
         type: array
       name:
+        type: string
+    type: object
+  model.UserInfo:
+    properties:
+      address:
+        type: string
+      description:
+        type: string
+      name:
+        type: string
+      pictureURL:
+        type: string
+      role:
+        type: string
+      timeCreated:
         type: string
     type: object
   processing.EthereumTx:
@@ -421,6 +444,11 @@ paths:
         name: AuthUserId
         required: true
         type: string
+      - description: The identifier of the system, typically a reverse domain identifier
+        in: header
+        name: EhrSystemId
+        required: true
+        type: string
       - description: DTO with data to create group access
         in: body
         name: Request
@@ -460,6 +488,11 @@ paths:
         name: AuthUserId
         required: true
         type: string
+      - description: The identifier of the system, typically a reverse domain identifier
+        in: header
+        name: EhrSystemId
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -495,6 +528,11 @@ paths:
         name: AuthUserId
         required: true
         type: string
+      - description: The identifier of the system, typically a reverse domain identifier
+        in: header
+        name: EhrSystemId
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -515,7 +553,8 @@ paths:
       - application/json
       description: https://specifications.openehr.org/releases/ITS-REST/latest/definition.html#tag/Query/operation/definition_query_store.yaml
       parameters:
-      - description: 'If pattern should given be in the format of [{namespace}::]{query-name},  and  when  is  empty,  it  will  be  treated  as  '
+      - description: 'If pattern should given be in the format of [{namespace}::]{query-name},
+          and when is empty, it will be treated as '
         in: path
         name: qualified_query_name
         required: true
@@ -547,7 +586,8 @@ paths:
           description: Is returned when the query was successfully stored.
         "400":
           description: Is returned when the server was unable to store the query.
-            This could be due to incorrect request body (could not be parsed, etc),  unknown  query  type,  etc.
+            This could be due to incorrect request body (could not be parsed, etc),
+            unknown query type, etc.
         "500":
           description: Is returned when an unexpected error occurs while processing
             a request
@@ -1535,6 +1575,46 @@ paths:
       summary: Get list of transactions by certain request id for authorized user
       tags:
       - REQUEST
+  /user/{user_id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Bearer AccessToken
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: UserId
+        in: header
+        name: AuthUserId
+        required: true
+        type: string
+      - description: The identifier of the system, typically a reverse domain identifier
+        in: header
+        name: EhrSystemId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.UserInfo'
+        "401":
+          description: User unauthorized
+        "404":
+          description: User with ID not exist
+        "422":
+          description: The request could not be understood by the server due to incorrect
+            syntax. The client SHOULD NOT repeat the request without modifications.
+        "500":
+          description: Is returned when an unexpected error occurs while processing
+            a request
+      summary: Get user info
+      tags:
+      - USER
   /user/group:
     post:
       consumes:
@@ -1545,7 +1625,7 @@ paths:
         name: Authorization
         required: true
         type: string
-      - description: UserId UUID
+      - description: UserId
         in: header
         name: AuthUserId
         required: true
@@ -1620,6 +1700,59 @@ paths:
           description: Is returned when an unexpected error occurs while processing
             a request
       summary: Get user group by ID
+      tags:
+      - USER
+  /user/group/{group_id}/user_add/{user_id}/{access_level}:
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: Bearer AccessToken
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: UserId
+        in: header
+        name: AuthUserId
+        required: true
+        type: string
+      - description: The identifier of the system, typically a reverse domain identifier
+        in: header
+        name: EhrSystemId
+        required: true
+        type: string
+      - description: The identifier of the user to be added
+        in: path
+        name: user_id
+        required: true
+        type: string
+      - description: Access Level. One of `admin` or `read`
+        in: path
+        name: access_level
+        required: true
+        type: string
+      responses:
+        "200":
+          description: ""
+          headers:
+            RequestID:
+              description: Request identifier
+              type: string
+        "400":
+          description: The request could not be understood by the server due to incorrect
+            syntax.
+        "403":
+          description: Authentication required or user does not have access to change
+            the group
+        "404":
+          description: Group or adding user is not exist
+        "409":
+          description: The user is already a member of a group
+        "500":
+          description: Is returned when an unexpected error occurs while processing
+            a request
+      summary: Adding a user to a group
       tags:
       - USER
   /user/login:
@@ -1757,7 +1890,8 @@ paths:
         name: EhrSystemId
         required: true
         type: string
-      - description: User creation request
+      - description: 'User creation request. `role`: 0 - Patient, 1 - Doctor. Fields
+          `Name`, `Address`, `Description`, `PictureURL` are required for Doctor role'
         in: body
         name: Request
         required: true
